# aws-dna-team5-sample

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
events/: echo.json
takagi/: decorators.py  models.py
takagi/functions/: echo.py
takagi/tests/unit/: test_handler.py
