[tool.poetry]
name = "takagi"
version = "0.1.0"
description = "Teasing master Takagisan"
authors = ["Doon"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.56"
slackclient = "^2.8.2"
pydantic = "^1.6.1"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
aws-sam-cli = "^1.2.0"
black = "^20.8b1"
isort = "^5.5.1"
autoflake = "^1.4"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.python-version
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

